2007-11-02  Mickael Remond  <mremond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Refactoring. Moved c2s limits
	acquisition to a separate module.
	* src/ejabberd_c2s_config.erl: Likewise.
	
2007-11-01  Mickael Remond  <mremond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Support for c2s ACL access,
	max_stanza and shaper on http_poll connections (EJAB-243,
	EJAB-415, EJAB-416)

2007-10-30  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_s2s.erl: don't use the resource of the sender to choose
	a s2s connection to ensure that a muc room always uses the same
	connection (EJAB-360)

2007-10-23  Christophe Romain  <christophe.romain@process-one.net>

	* doc/dev.tex: Added extauth script details (EJAB-334)
	
2007-10-17  Christophe Romain  <christophe.romain@process-one.net>

	* src/ejabberdctl.template: Bugfix on previous change (EJAB-380)

2007-10-17  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberdctl.template: Several improvements (EJAB-380)
	(thanks to Sander Devrieze, Sergei Golovan, Torsten Werner and
	Badlop)
	* src/ejabberdctl.cfg.example: Likewise
	* src/ejabberd.inetrc: Likewise
	* src/Makefile.in: Likewise

	* src/mod_privacy.erl: Bugfix

2007-10-07  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_vcard_odbc.erl: Reverted previous change

2007-10-06  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_vcard_odbc.erl: Bugfix

	* src/mod_offline_odbc.erl: Bugfix

2007-10-01  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_auth_pam.erl: Support for PAM authentication (EJAB-307) 
	(thanks to Evgeniy Khramtsov)
	* src/ejabberd.cfg.example: Likewise
	* src/configure.ac: Likewise
	* src/aclocal.m4: Likewise
	* src/Makefile.in: Likewise
	* examples/ejabberd.pam: Likewise
	* doc/guide.tex: Likewise

2007-09-28  Christophe Romain  <christophe.romain@process-one.net>

	* src/odbc/mysql.sql: Added some missing NOT NULL restrictions
	* src/odbc/mssql.sql: Likewise
	* src/odbc/pg.sql: Likewise
