@@ -1,3 +1,10 @@
+2007-11-03  Mickael Remond  <mremond@process-one.net>
+
+	* src/ejabberd_auth.erl: Better count management and batch users
+	retrieval for relational database (Thanks to Massimiliano Mirra).
+	* src/ejabberd_auth_odbc.erl: Likewise.
+	* src/odbc/odbc_queries.erl: Likewise.
+
 2007-11-02  Mickael Remond  <mremond@process-one.net>
 
 	* src/web/ejabberd_http_poll.erl: Refactoring. Moved c2s limits
